--- a/site/index.html
+++ b/site/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>
-            Hello coursera
+            Hello coursera. nice to meet you
         </title>
     </head>
     <body>
